chore: 각 ListItem페이지 컴포넌트 wrapper 추가

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["/*"],
+      "@assets/*": ["assets/*"],
       "@components/*": ["components/*"],
       "@pages/*": ["pages/*"],
       "@hooks/*": ["hooks/*"],
