fix : svg,이미지 경로 문제 수정 완료

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@/*": ["/*"],
       "@assets/*": ["assets/*"],
+      "@public/*": ["public/*"],
       "@components/*": ["components/*"],
       "@pages/*": ["pages/*"],
       "@hooks/*": ["hooks/*"],
