--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,7 @@
       "@public/*": ["public/*"],
       "@components/*": ["components/*"],
       "@pages/*": ["pages/*"],
+      "@utils/*": ["utils/*"],
       "@hooks/*": ["hooks/*"],
       "@zustand/*": ["zustand/*"]
     }
