--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_CLIENT_ID=03-OGC
-VITE_API_SERVER=https://market-lion.koyeb.app/api
+# VITE_API_SERVER=https://market-lion.koyeb.app/api //예전 서버
+VITE_API_SERVER=https://api.frontendschool.shop/api
