feat:해당 url에 맞는 메뉴 활성화 및 api 변경

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 VITE_CLIENT_ID=03-OGC
-# VITE_API_SERVER=https://market-lion.koyeb.app/api //예전 서버
-VITE_API_SERVER=https://api.frontendschool.shop/api
+VITE_API_SERVER=https://market-lion.koyeb.app/api 
+# //예전 서버
+
+# //최신 서버
+# VITE_API_SERVER=https://api.frontendschool.shop/api
