--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ VITE_API_SERVER=https://market-lion.koyeb.app/api
 
 # //최신 서버
 # VITE_API_SERVER=https://api.frontendschool.shop/api
+
+REACT_APP_KAKAO_API_KEY=d0b413579f69b438bfa123da6d5afb66
