--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-kakao-maps-sdk": "^1.1.26",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.1.1",
     "zustand": "^4.5.2"
