--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
     "axios": "^1.6.8",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-infinite-scroller": "^1.2.6",
     "react-kakao-maps-sdk": "^1.1.26",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.1.1",
