--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+
 node_modules
 dist
 dist-ssr
 *.local
+
+
+# local env files
+.env
+.env.local
 
 # Editor directories and files
 .vscode/*
